{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "6b73eb51-66cb-4b0e-b44b-fb9835b4a689",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "26e93200-d525-41a4-95ba-16c351c3f7ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressTouch",
                    "type": "Button",
                    "id": "6bbb1281-c94e-4df4-ac94-29c6c0a06902",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition_00",
                    "type": "PassThrough",
                    "id": "b18f0229-88e1-46d1-8ede-09fa1efa7306",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition_01",
                    "type": "PassThrough",
                    "id": "5ae752b0-793e-436a-a848-027f61f27ccf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryDelta",
                    "type": "PassThrough",
                    "id": "9c2a6eee-7e08-47e2-b3b4-53ee4a591226",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CountTouches",
                    "type": "Value",
                    "id": "2b09d6ee-16bd-4490-bcad-67ba7b745234",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta_00",
                    "type": "PassThrough",
                    "id": "d92b7cf1-a714-4b62-be13-262f90485683",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDelta_01",
                    "type": "PassThrough",
                    "id": "e1cff19d-a0ff-4d78-a3e1-1c3373f22a05",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e30102ba-7c4f-4667-83d6-6cac03262dce",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e7efef3-2e5c-46ee-af1f-9773d204469c",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dae9879-19f1-4997-9da2-9eccfadc7aef",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition_00",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "235936c0-4e6b-459f-867f-c93826c5cd05",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition_01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c2ad9c3-c255-4810-9579-a8bc7d2c0f7b",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0611fac8-6723-4017-80d7-a16a2aba73bf",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CountTouches",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e1e88f0-3a84-443a-b457-ba1e731fda75",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta_00",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4cd50f74-d316-4cda-9243-666bf3ef4b38",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta_01",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}